--- a/greeting/Gemfile
+++ b/greeting/Gemfile
@@ -32,6 +32,25 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+
+#############################
+#My own gems.
+
+# Font-awesome
+gem 'font-awesome-rails'
+
+# A different database
+gem 'thin'
+
+#Date and time formatting.
+gem 'stamp'
+
+group :development do
+  # Quiet assets. Reduces noise in the log files.
+  gem 'quiet_assets'
+end
+
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
