--- a/music_db/test/fixtures/songs.yml
+++ b/music_db/test/fixtures/songs.yml
@@ -6,4 +6,19 @@ one:
 
 two:
   name: MyString
-  artist_id: 
+  artist_id:
+
+# == Schema Information
+#
+# Table name: songs
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  artist_id  :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_songs_on_artist_id  (artist_id)
+#
