--- a/squirrel-daycare/Gemfile
+++ b/squirrel-daycare/Gemfile
@@ -47,6 +47,8 @@ gem 'stamp'
 
 gem 'starter_generators'
 
+gem 'awesome_print'
+
 group :development do
   # Quiet assets. Reduces noise in the log files.
   gem 'quiet_assets'
