--- a/music_db/Gemfile
+++ b/music_db/Gemfile
@@ -34,11 +34,15 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'thin'
 gem 'starter_generators'
-gem 'quiet_assets', group: :development
 gem 'awesome_print'
 gem 'annotate', '~> 2.6.6'
 
 
+group :development do
+  gem 'populator'
+  gem 'faker'
+  gem 'quiet_assets'
+end
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
