--- a/squirrel-daycare/Gemfile
+++ b/squirrel-daycare/Gemfile
@@ -49,6 +49,8 @@ gem 'starter_generators'
 
 gem 'awesome_print'
 
+gem 'paperclip'
+
 group :development do
   # Quiet assets. Reduces noise in the log files.
   gem 'quiet_assets'
