--- a/music_db/test/fixtures/artists.yml
+++ b/music_db/test/fixtures/artists.yml
@@ -17,6 +17,7 @@ two:
 #  genre_id   :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  bio        :text
 #
 # Indexes
 #
